# MotionPlanningControl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
01_Python_project/release/: README.md
01_Python_project/release/01_filters/: comparison_demo.py
01_Python_project/release/01_filters/01_average_filter/: README.md  average_filter.py  demo.py  test_average_filter.py
01_Python_project/release/01_filters/02_moving_average_filter/: README.md  demo.py  moving_average_filter.py  test_moving_average_filter.py
01_Python_project/release/01_filters/03_low_pass_filter/: README.md  demo.py  low_pass_filter.py  test_low_pass_filter.py
01_Python_project/release/01_filters/04_kalman_filter/: README.md  demo.py  kalman_filter.py  (+2 more)
01_Python_project/release/02_pid/: simulator_pid.py
01_Python_project/release/03_vehicle_control/: simulator_vehicle_control.py
01_Python_project/release/04_path_planning/: debug_signals.py  simulator_path_planning.py  simulator_search.py
01_Python_project/release/05_trajectory_planning/: simulator_trajectory_planning.py
02_Carmaker_project/Practice_sample/: .IPGControl.conf
02_Carmaker_project/Practice_sample/src_cm4sl/: chart18_current.m  chart45_current.m  chart45_new.m  chart45_with_t00.m  chart45_with_t00_carsize.m  cmenv.m  debug_day45_after_boundary_fix.m  debug_day45_after_boundary_fix2.m  debug_day45_boundary.m  debug_day45_boundary2.m  debug_day45_final.m  debug_day45_fix_test.m  debug_day45_planner.m  debug_day45_t00_actual_size.m  debug_day45_test_fix.m  debug_day45_visualize.m  debug_day45_with_t00.m  generic_IVS.mdl
(+202 files in other folders)
